# projets-L2

C++/K-means Clustering/: Makefile  README.md  k_means.cpp
C++/K-means Clustering/csv/: iris2.csv
C++/Éco-Système/: Makefile  README.md
C++/Éco-Système/headers/: animal.hpp  herbe.hpp  loup.hpp  mouton.hpp  point.hpp  univers.hpp  vegetal.hpp
C++/Éco-Système/src/: animal.cpp  herbe.cpp  loup.cpp  main.cpp  mouton.cpp  univers.cpp  vegetal.cpp
C/Compression:Décompression de Huffman/: Makefile  README.md  huff.c  projet.txt
JAVA/Interface de Gestion d'Hôtels/Gestion_Hotels/: .classpath  .project
JAVA/Interface de Gestion d'Hôtels/Gestion_Hotels/ejbModule/entities/: Administrateur.java  Adresse.java  Chambre.java  Client.java  Facture.java  Hotel.java  Reservation.java
JAVA/Interface de Gestion d'Hôtels/clientEJB/: .classpath  .project
JAVA/Interface de Gestion d'Hôtels/clientEJB/src/: fenetre_admin.java  fenetre_adr.java  fenetre_chambres.java  fenetre_clients.java  fenetre_reservation.java  fenetres.java  jboss-ejb-client.properties  jndi.properties
Rust/Anime Voice API/: AUTHORS  CREDITS.md  Cargo.toml  LICENSE  README.md  anime_voice.sql
Rust/Anime Voice API/misc/: anime-database.txt  seiyuu-database.txt
Rust/Anime Voice API/scripts/: convert_database_anime.py  convert_database_seiyuu.py  test_request.py
Rust/Anime Voice API/src/: api_keys.json  config.rs  main.rs
Rust/Anime Voice API/src/database/: mod.rs  models.rs
Rust/Anime Voice API/src/routes/: animes.rs  characters.rs  mod.rs  seiyuus.rs
(+3 files in other folders)
